<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center">

    <TextView
        android:id="@+id/appTitle"
        style="@style/titulo_app"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/appSubtitle"
        style="@style/subtitulo_app"
        android:text="@string/subtitle_app" />

    <Button
        android:id="@+id/startButton"
        style="@style/botao_principal"
        android:text="@string/start_button"
        android:background="@drawable/button_ripple"
        app:backgroundTint="@null"/>

</LinearLayout>